# finbuddy

./: LICENSE  README.md  README_EN.md  README_TC.md  examples\basic_usage.py  examples\client_usage.py  finbuddy\__init__.py  finbuddy\analyzer.py  finbuddy\cli.py  finbuddy\client.py  finbuddy\reporter.py  finbuddy\summarizer.py  pyproject.toml  tests\test_analyzer.py  tests\test_client.py  tests\test_reporter.py  tests\test_summarizer.py
